--- a/app/http/index.html
+++ b/app/http/index.html
@@ -4,6 +4,6 @@
         <title>Scheduling</title>
     </head>
     <body>
-        <div id="event-E3"></div>
+        <div id="event-E3">hello</div>
     </body>
 </html>
