--- a/app/http/index.html
+++ b/app/http/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
     <head>
         <title>Scheduling</title>
+        <style>
+            event {
+                display: block;
+                background-color: #ccc;                
+            }
+        </style>
     </head>
     <body>
-        <div id="event-E3">20:00</div>
+        <event id="event-E3" data-start="18:00" data-end="20:00">hello world</event>
     </body>
 </html>
