--- a/app/http/index.html
+++ b/app/http/index.html
@@ -3,13 +3,13 @@
     <head>
         <title>Scheduling</title>
         <meta charset="utf-8"/>
-        <link  href="/scheduling.css" rel="StyleSheet" type="text/css"> 
+        <link  href="scheduling.css" rel="StyleSheet" type="text/css"> 
     </head>
     <body>
         <div class="container">
             <yop-calendar></yop-calendar>
         </div>
 
-        <script src="/calendar.js"></script>
+        <script src="calendar.js"></script>
     </body>
 </html>
