--- a/app/http/index.html
+++ b/app/http/index.html
@@ -10,6 +10,6 @@
             <yop-calendar></yop-calendar>
         </div>
 
-        <script src="calendar.js"></script>
+        <script src="all.js"></script>
     </body>
 </html>
