--- a/app/http/index.html
+++ b/app/http/index.html
@@ -6,8 +6,9 @@
         <link  href="scheduling.css" rel="StyleSheet" type="text/css"> 
     </head>
     <body>
-        <yop-calendar></yop-calendar>
-        
+        <div class="container">
+            <yop-calendar></yop-calendar>
+        </div>
         <script src="all.js"></script>
     </body>
 </html>
