login form positions

--- a/app/http/index.html
+++ b/app/http/index.html
@@ -8,13 +8,10 @@
     <body>
         <yop-route when="/">
             <div class="section signin">
-                <label>Login</label>
-                <br/>
-                <input id="login" />
-                <br/>
-                <br/>
+                <label >Login</label>
+                <input class="section-middle-line" id="login" />
                 <yop-link to="/events">
-                    <div class="action" id="signin">Sign in</div>
+                    <div class="action section-last-line" id="signin">Sign in</div>
                 </yop-link>
             </div>
         </yop-route>
