--- a/app/web/index.html
+++ b/app/web/index.html
@@ -6,6 +6,8 @@
         <link  href="scheduling.css" rel="StyleSheet" type="text/css"> 
     </head>
     <body>
+        <system-status></system-status>
+
         <yop-route when="/">
             <div class="section signin">
                 <label >Login</label>
