--- a/app/web/index.html
+++ b/app/web/index.html
@@ -6,7 +6,7 @@
         <link  href="scheduling.css" rel="StyleSheet" type="text/css"> 
     </head>
     <body>
-        <system-status></system-status>
+        <yop-header></yop-header>        
 
         <yop-route when="/">
             <div class="section signin">
