--- a/app/web/index.html
+++ b/app/web/index.html
@@ -19,6 +19,7 @@
         </yop-route>
         <yop-route when="/events">
             <div class="container">
+                <resource-creation></resource-creation>
                 <yop-calendar></yop-calendar>
             </div>
         </yop-route>
