login with secret key

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -11,7 +11,7 @@
         <yop-route when="/">
             <div class="vertical-form login-form">
                 <label >Login</label>
-                <input id="login" />
+                <input id="login" type="password"/>
                 <yop-link to="/events">
                     <button id="signin">Sign in</button>
                 </yop-link>
