--- a/app/web/index.html
+++ b/app/web/index.html
@@ -20,6 +20,7 @@
         <yop-route when="/events">
             <resource-creation></resource-creation>
             <yop-calendar></yop-calendar>
+            <event-creation></event-creation>
         </yop-route>
 
         <script src="yop.js"></script>
