--- a/app/web/index.html
+++ b/app/web/index.html
@@ -21,6 +21,7 @@
             <resource-creation></resource-creation>
             <yop-calendar></yop-calendar>
             <event-creation></event-creation>
+            <show-event></show-event>
         </yop-route>
 
         <script src="yop.js"></script>
