--- a/app/web/index.html
+++ b/app/web/index.html
@@ -20,6 +20,7 @@
         <yop-route when="/events">
             <yop-calendar></yop-calendar>
             <resource-creation></resource-creation>
+            <show-resource></show-resource>
             <event-creation></event-creation>
             <show-event></show-event>
         </yop-route>
