--- a/app/web/index.html
+++ b/app/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Scheduling</title>
+        <title>Yop</title>
         <meta charset="utf-8"/>        
         <link  href="scheduling.css" rel="StyleSheet" type="text/css"> 
     </head>
