--- a/app/web/index.html
+++ b/app/web/index.html
@@ -10,7 +10,7 @@
         <yop-header></yop-header>        
 
         <yop-route when="/" then="page-sign-in"></yop-route>
-        <yop-route when="/events" then="page-events"></yop-route>
+        <yop-route when="/calendar" then="page-events"></yop-route>
         <yop-route when="/configuration" then="page-configuration"></yop-route>
             
         <script src="yop.js"></script>
