--- a/app/web/index.html
+++ b/app/web/index.html
@@ -6,6 +6,7 @@
         <link  href="scheduling.css" rel="StyleSheet" type="text/css"> 
     </head>
     <body>
+        <yop-success-message></yop-success-message>
         <yop-error-message></yop-error-message>
         <yop-header></yop-header>        
 
