route /calendar-day

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -11,7 +11,7 @@
         <yop-header></yop-header>        
 
         <yop-route when="/" then="page-sign-in"></yop-route>
-        <yop-route when="/calendar" then="page-calendar-day"></yop-route>
+        <yop-route when="/calendar-day" then="page-calendar-day"></yop-route>
         <yop-route when="/configuration" then="page-configuration"></yop-route>
             
         <script src="yop.js"></script>
