explore week view with MagicNumber

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -12,6 +12,7 @@
 
         <yop-route when="/" then="page-sign-in"></yop-route>
         <yop-route when="/calendar-day" then="page-calendar-day"></yop-route>
+        <yop-route when="/calendar-week" then="page-calendar-week"></yop-route>
         <yop-route when="/configuration" then="page-configuration"></yop-route>
             
         <script src="yop.js"></script>
